--- a/react.portfolio/public/index.html
+++ b/react.portfolio/public/index.html
@@ -24,6 +24,25 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- link to google fonts-->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100&family=Libre+Baskerville&family=Open+Sans&family=Roboto&family=Roboto+Slab&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- boootstrap-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+      crossorigin="anonymous"
+    ></script>
+    <!--font awesome-->
+    <script
+      src="https://kit.fontawesome.com/7c715641eb.js"
+      crossorigin="anonymous"
+    ></script>
+
     <title>React App</title>
   </head>
   <body>
